# kiriki

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Makefile.am  README  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  Makefile.am  README
images/: CMakeLists.txt  Makefile.am  README
po/ar/: kiriki.po
po/ast/: kiriki.po
po/be/: kiriki.po
po/bg/: kiriki.po
po/bs/: kiriki.po
po/ca/: kiriki.po
po/ca/docs/kiriki/: index.docbook
po/ca@valencia/: kiriki.po
po/cs/: kiriki.po
po/csb/: kiriki.po
po/da/: kiriki.po
po/de/: kiriki.po
po/de/docs/kiriki/: index.docbook
po/el/: kiriki.po
po/en_GB/: kiriki.po
po/eo/: kiriki.po
po/es/: kiriki.po
po/es/docs/kiriki/: index.docbook
po/et/: kiriki.po
po/et/docs/kiriki/: index.docbook
po/eu/: kiriki.po
po/fi/: kiriki.po
po/fr/: kiriki.po
po/fr/docs/kiriki/: index.docbook
po/ga/: kiriki.po
po/gl/: kiriki.po
po/he/: kiriki.po
po/hi/: kiriki.po
po/hne/: kiriki.po
po/hr/: kiriki.po
po/hu/: kiriki.po
po/ia/: kiriki.po
po/id/: kiriki.po
po/is/: kiriki.po
po/it/: kiriki.po
po/it/docs/kiriki/: index.docbook
po/ja/: kiriki.po
po/ka/: kiriki.po
po/kk/: kiriki.po
po/km/: kiriki.po
po/ko/: kiriki.po
po/lt/: kiriki.po
po/lv/: kiriki.po
po/mai/: kiriki.po
po/ml/: kiriki.po
po/mr/: kiriki.po
po/nb/: kiriki.po
po/nds/: kiriki.po
po/nl/: kiriki.po
po/nl/docs/kiriki/: index.docbook
po/nn/: kiriki.po
po/oc/: kiriki.po
po/pl/: kiriki.po
po/pl/docs/kiriki/: index.docbook
po/pt/: kiriki.po
po/pt/docs/kiriki/: index.docbook
po/pt_BR/: kiriki.po
po/pt_BR/docs/kiriki/: index.docbook
po/ro/: kiriki.po
po/ru/: kiriki.po
po/sa/: kiriki.po
po/se/: kiriki.po
po/sk/: kiriki.po
po/sl/: kiriki.po
po/sl/docs/kiriki/: index.docbook
po/sr/: kiriki.po
po/sr@ijekavian/: kiriki.po
po/sr@ijekavianlatin/: kiriki.po
po/sr@latin/: kiriki.po
po/sv/: kiriki.po
po/sv/docs/kiriki/: index.docbook
po/tr/: kiriki.po
po/ug/: kiriki.po
po/uk/: kiriki.po
po/uk/docs/kiriki/: index.docbook
po/zh_CN/: kiriki.po
po/zh_TW/: kiriki.po
src/: CMakeLists.txt  Makefile.am  Messages.sh  computer.cpp  computer.h  configPage.ui  configwidget.cpp  configwidget.h  diceswidget.cpp  diceswidget.h  itemdelegate.cpp  itemdelegate.h  kiriki.cpp  kiriki.desktop  kiriki.h  kiriki.kcfg  kiriki.qrc  kirikiui.rc  lateralwidget.cpp  lateralwidget.h  main.cpp  org.kde.kiriki.appdata.xml  org.kde.kiriki.desktop  player.cpp  player.h  row.cpp  row.h  scores.cpp  scores.h  settings.kcfgc
